réparer le css de kiki

--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -33,7 +33,7 @@
             <label for="dateFinEncheres">Fin de l'enchère :</label>
             <input type="datetime-local" id="dateFinEncheres" th:field="*{dateFinEncheres}" required>
 
-            <div class="card retrait-card">
+            <div class="retrait-card">
                 <h3 class="floating-title-article">Retrait</h3>
 
                 <div class="form-group">
