ajout du btn d'ajout d'enchere

--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -28,6 +28,7 @@
 </main>
 <footer data-th-replace="~{fragments/footer :: footer}">
 </footer>
+<div th:replace="~{fragments/btn-+enchere :: btnEnchere}"></div>
 
 </body>
 </html>
