--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -8,54 +8,51 @@
         <form th:action="@{/articles/creer}" th:object="${article}" method="post" enctype="multipart/form-data">
 
             <label for="nomArticle">Article :</label>
-            <input type="text" id="nomArticle" th:field="*{nomArticle}" required>
+            <input type="text" id="nomArticle" name="nomArticle" th:field="*{nomArticle}" required>
 
             <label for="description">Description :</label>
-            <textarea id="description" th:field="*{description}" required></textarea>
+            <textarea id="description" name="description" th:field="*{description}" required></textarea>
 
             <label for="categorie">Catégorie :</label>
-            <select id="categorie" th:field="*{categorie}">
+            <select id="categorie" name="categorie" th:field="*{categorie}">
                 <option value="" disabled selected>Sélectionner une catégorie</option>
-                <option th:value="1">Informatique</option>
-                <option th:value="2">Vêtement</option>
-                <option th:value="3">Mobilier</option>
+                <option data-th-each="categorie : ${categories}" data-th-value="${categorie.idCategorie}" data-th-text="${categorie.libelle}"></option>
             </select>
 
-            <label for="photo">Photo de l'article :</label>
-            <input type="file" id="photo" name="photo" accept="image/*" required>
+            <label for="image">Photo de l'article :</label>
+            <input type="file" id="image" name="image" accept="image/*" required>
 
             <label for="miseAPrix">Mise à prix :</label>
-            <input type="number" id="miseAPrix" th:field="*{miseAPrix}" min="1" max="10000" value="150" required>
+            <input type="number" id="miseAPrix" name="miseAPrix" th:field="*{miseAPrix}" min="1" max="10000" value="150" required>
 
             <label for="dateDebutEncheres">Début de l'enchère :</label>
-            <input type="datetime-local" id="dateDebutEncheres" th:field="*{dateDebutEncheres}" required>
+            <input type="date" id="dateDebutEncheres" name="dateDebutEncheres" th:field="*{dateDebutEncheres}" th:attr="min=${#dates.format(#dates.createNow(), 'yyyy-MM-dd')}" required>
+
 
             <label for="dateFinEncheres">Fin de l'enchère :</label>
-            <input type="datetime-local" id="dateFinEncheres" th:field="*{dateFinEncheres}" required>
+            <input type="date" id="dateFinEncheres" name="dateFinEncheres" th:field="*{dateFinEncheres}" th:attr="min=${#dates.format(#dates.createNow(), 'yyyy-MM-dd')}" required>
 
-            <div class="retrait-card">
+            <div class="card retrait-card">
                 <h3 class="floating-title-article">Retrait</h3>
 
                 <div class="form-group">
-                    <label for="lieuRetrait.rue">Rue :</label>
-                    <input type="text" id="lieuRetrait.rue" th:field="*{lieuRetrait.rue}" required>
+                    <label for="rue">Rue :</label>
+                    <input type="text" id="rue" name="rue" th:field="*{rue}" required>
                 </div>
 
                 <div class="form-group">
-                    <label for="lieuRetrait.code_Postal">Code postal :</label>
-                    <input type="text" id="lieuRetrait.code_Postal" th:field="*{lieuRetrait.code_Postal}" required>
+                    <label for="codePostal">Code postal :</label>
+                    <input type="text" id="codePostal" name="codePostal" th:field="*{codePostal}" required>
                 </div>
 
                 <div class="form-group">
-                    <label for="lieuRetrait.ville">Ville :</label>
-                    <input type="text" id="lieuRetrait.ville" th:field="*{lieuRetrait.ville}" required>
+                    <label for="ville">Ville :</label>
+                    <input type="text" id="ville" name="ville" th:field="*{ville}" required>
                 </div>
             </div>
 
-            <div class="form-buttons">
-                <button type="submit">Enregistrer</button>
-                <button type="reset">Effacer</button>
-            </div>
+            <button type="submit">Enregistrer</button>
+            <button type="reset">Effacer</button>
         </form>
     </div>
 </main>
