Modification du profil finalisé

--- a/src/main/resources/templates/fragments/profilForm.html
+++ b/src/main/resources/templates/fragments/profilForm.html
@@ -1,5 +1,5 @@
 <div th:fragment="profilForm(mode)">
-    <form th:action="@{/profil}" th:object="${utilisateurDTO}" method="post">
+    <form th:action="@{/monProfil}" th:object="${utilisateurDTO}" method="post">
         <ul>
             <li>
                 <label for="pseudo">Pseudo :</label>
