--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -1,5 +1,7 @@
 <html data-th-replace="~{layout/layout :: layout(content=~{:: main}, title=~{:: title}, css=~{:: #extraCss})}">
-<title>Vendre un nouvel article</title>
+<head>
+    <title>Vendre un nouvel article</title>
+</head>
 
 <body>
 <main class="container-form-article">
@@ -16,21 +18,27 @@
             <label for="categorie">Catégorie :</label>
             <select id="categorie" name="categorie" th:field="*{categorie}">
                 <option value="" disabled selected>Sélectionner une catégorie</option>
-                <option data-th-each="categorie : ${categories}" data-th-value="${categorie.idCategorie}" data-th-text="${categorie.libelle}"></option>
+                <option data-th-each="categorie : ${categories}"
+                        data-th-value="${categorie.idCategorie}"
+                        data-th-text="${categorie.libelle}"></option>
             </select>
 
             <label for="image">Photo de l'article :</label>
             <input type="file" id="image" name="image" accept="image/*" required>
+            <div id="imagePreviewContainer" style="margin-top: 1rem;">
+                <img id="imagePreview" src="#" alt="Aperçu de l'image" style="max-width: 200px; display: none; border: 1px solid #ccc; padding: 5px;">
+            </div>
 
             <label for="miseAPrix">Mise à prix :</label>
             <input type="number" id="miseAPrix" name="miseAPrix" th:field="*{miseAPrix}" min="1" max="10000" value="150" required>
 
             <label for="dateDebutEncheres">Début de l'enchère :</label>
-            <input type="date" id="dateDebutEncheres" name="dateDebutEncheres" th:field="*{dateDebutEncheres}" th:attr="min=${#dates.format(#dates.createNow(), 'yyyy-MM-dd')}" required>
-
+            <input type="date" id="dateDebutEncheres" name="dateDebutEncheres" th:field="*{dateDebutEncheres}"
+                   th:attr="min=${#dates.format(#dates.createNow(), 'yyyy-MM-dd')}" required>
 
             <label for="dateFinEncheres">Fin de l'enchère :</label>
-            <input type="date" id="dateFinEncheres" name="dateFinEncheres" th:field="*{dateFinEncheres}" th:attr="min=${#dates.format(#dates.createNow(), 'yyyy-MM-dd')}" required>
+            <input type="date" id="dateFinEncheres" name="dateFinEncheres" th:field="*{dateFinEncheres}"
+                   th:attr="min=${#dates.format(#dates.createNow(), 'yyyy-MM-dd')}" required>
 
             <div class="card retrait-card">
                 <h3 class="floating-title-article">Retrait</h3>
@@ -55,5 +63,8 @@
             <button type="reset">Effacer</button>
         </form>
     </div>
+    <script src="/js/article-preview.js"></script>
 </main>
+
+
 
