--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -9,10 +9,10 @@
             <nav class="nav_bar">
                 <ul>
                     <li>
-                        <a href="/inscription"><i class="fa-solid fa-user-plus"></i><span class="nav_titre">S'inscrire</span></a>
+                        <a data-th-href="@{/inscription}"><i class="fa-solid fa-user-plus"></i><span class="nav_titre">S'inscrire</span></a>
                     </li>
                     <li>
-                <a href="/connexion"><i class="fa-solid fa-right-to-bracket"></i><span class="nav_titre">Se connecter</span></a>
+                <a data-th-href="@{/connexion}"><i class="fa-solid fa-right-to-bracket"></i><span class="nav_titre">Se connecter</span></a>
                     </li>
                 </ul>
             </nav>
@@ -27,16 +27,16 @@
             <nav class="nav_bar">
                 <ul>
                     <li>
-                        <a href="/monProfil" class="profile-link"> <i class="fa-regular fa-user"></i>
+                        <a data-th-href="@{/monProfil}" class="profile-link"> <i class="fa-regular fa-user"></i>
                     <!--                    <img th:src="@{'/img/profils/' + ${utilisateur.photo}}" alt="Photo de profil" class="profile-pic">-->
                             <span class="nav_titre" th:text="${utilisateur.pseudo}+' ('+${utilisateur.credit}+' crédit(s))'">Pseudo</span>
                         </a>
                     </li>
                     <li>
-                        <a href="/encheres"><i class="fa-solid fa-gavel"></i><span class="nav_titre">Mes enchères</span></a>
+                        <a data-th-href="@{/encheres}" ><i class="fa-solid fa-gavel"></i><span class="nav_titre">Mes enchères</span></a>
                     </li>
                     <li>
-                        <a href="/deconnexion"><i class="fa-regular fa-circle-xmark"></i><span class="nav_titre">Déconnexion</span></a>
+                        <a data-th-href="@{/deconnexion}"><i class="fa-regular fa-circle-xmark"></i><span class="nav_titre">Déconnexion</span></a>
                     </li>
                 </ul>
             </nav>
