--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" data-th-href="@{/css/article_mobile.css}">
     <link rel="stylesheet" data-th-href="@{/css/article.css}">
     <link rel="stylesheet" data-th-href="@{/css/header.css}">
+    <link rel="stylesheet" data-th-href="@{/css/filtre-index-recherche.css}">
+    <link rel="stylesheet" data-th-href="@{/css/header.css}">
     <link rel="stylesheet" data-th-href="@{/css/footer.css}">
     <link rel="shortcut icon" data-th-href="@{/images/LogoENI.png}" />
     <div data-th-replace="${css} ?: ~{}"></div>
