--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -95,6 +95,14 @@ nav a:hover {
         color: white;
         font-weight: bold;
     }
+    .filtre-button {
+        display: none;
+    }
+    /* bouton version desktop désactivé */
+    .text_research
+    {
+        display:none;
+    }
  }
 
 @media screen and (min-width: 768px) and (max-width: 991px) {
