--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,32 +9,37 @@
 <title>Enchères ENI - Accueil</title>
 
 <main>
+    <!--
     <section class="filtres">
-        <p class="filtre-title">Filtres :</p>
-        <div class="filtre-group">
-            <div class="filtre-input">
-                <label for="searchName"></label>
-                <div class="input-icon">
-                    <i class="icon-search">🔍</i>
-                    <input type="text" id="searchName" placeholder="Le nom de l'article contient">
+        <h2 class="encheres-title">Liste des enchères</h2>
+        <div class="card-container filtrant">
+             titre devant les filtres
+            <p class="filtre-title">Filtres :</p>
+            le div qui englobe tous les inputs , icones et boutons des filtres
+            <div class="filtre-group">
+                <div class="filtre-categorie">
+                    <label for="categorie">Catégorie :</label>
+                    <select id="categorie">
+                        <option value="all">Toutes</option>
+                         Affichage des catégories avec Thymeleaf
+                        <option th:each="categorie : ${categories}" th:value="${categorie.idCategorie}" th:text="${categorie.libelle}"></option>
+                    </select>
+                </div>
+                <div class="filtre-input">
+                    <label for="searchName"></label>
+                    <div class="input-icon">
+                        <input type="text" id="searchName" placeholder="Le nom de l'article contient">
+                     </div>
+                </div>
+                <div class="filtre-button">
+                    <input type="submit" value="Rechercher" class="btn"><span><i class="icon-search fas fa-search"></i></span>
+                </div>
+
                 </div>
             </div>
-            <div class="filtre-button">
-                <input type="submit" value="Rechercher" class="btn">
-            </div>
-            <div class="filtre-categorie">
-                <label for="categorie">Catégorie :</label>
-                <select id="categorie">
-                    <option value="all">Toutes</option>
-                    <!-- Affichage des catégories avec Thymeleaf -->
-                    <option th:each="categorie : ${categories}" th:value="${categorie.idCategorie}" th:text="${categorie.libelle}"></option>
-                </select>
-            </div>
         </div>
+    -->
     </section>
-
-    <h2 class="encheres-title">Liste des enchères</h2>
-
     <section class="encheres">
         <div class="carousel">
             <div class="card-container">
