--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -29,7 +29,7 @@
 </main>
 <footer data-th-replace="~{fragments/footer :: footer}">
 </footer>
-<div th:replace="~{fragments/btn-+enchere :: btnEnchere}"></div>
+<div th:replace="~{fragments/btnEnchere :: btnEnchere}"></div>
 
 </body>
 </html>
