Fragment error sur la modification du profil

--- a/src/main/resources/templates/fragments/profilForm.html
+++ b/src/main/resources/templates/fragments/profilForm.html
@@ -71,5 +71,7 @@
             </li>
             <button type="submit" th:if="${mode == 'modif'}">Enregistrer</button>
         </ul>
+        <div th:replace="fragments/fragment-error :: fragmentErreur"></div>
     </form>
 </div>
+
