--- a/src/main/resources/templates/fragments/form-filtres-encheres.html
+++ b/src/main/resources/templates/fragments/form-filtres-encheres.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
-<div th:fragment="filtre-index-recherche">
+<div th:fragment="filtres">
     <div class="recherche-container">
             <form class="radio-form">
                 <p>Liste des enchères :</p>
