--- a/src/main/resources/templates/mesEncheres.html
+++ b/src/main/resources/templates/mesEncheres.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" data-th-href="@{/css/mesEncheres_mobile.css}">
 </div>
 <main>
-
+    <div th:replace="fragments/form-filtres-encheres :: filtres"></div>
     <h2 class="titre_mobile_encheres">Mes objets mis en enchère terminés</h2>
     <section class="encheres">
         <div class="carousel">
