--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" data-th-href="@{/css/index.css}">
     <link rel="stylesheet" data-th-href="@{/css/index_mobile.css}">
-    <link rel="stylesheet" data-th-href="@{/css/modal.css}">
+    <link rel="stylesheet" data-th-href="@{/css/modals-auth.css}">
     <link rel="stylesheet" data-th-href="@{/css/mesEncheres.css}">
     <link rel="stylesheet" data-th-href="@{/css/mesEncheres_mobile.css}">
     <link rel="stylesheet" data-th-href="@{/css/article_mobile.css}">
