travail sur mesEncheres html pour integrer des filtres de recherche

--- a/src/main/resources/templates/fragments/filtre-index-recherche.html
+++ b/src/main/resources/templates/fragments/filtre-index-recherche.html
@@ -1,4 +1,4 @@
-<div th:fragment="filtre-index-recherche">
+<div th:fragment="filtre">
     <h2 class="encheres-title">Liste des enchères</h2>
         <div class="card-container filtrant">
             <!--titre devant les filtres-->
