--- a/src/main/resources/templates/fragments/form-filtres-encheres.html
+++ b/src/main/resources/templates/fragments/form-filtres-encheres.html
@@ -2,23 +2,28 @@
 
 <div th:fragment="filtres">
     <div class="recherche-container">
-            <form class="radio-form">
-                <p>Liste des enchères :</p>
+        <form class="radio-form" th:action="@{/filtres}" method="get">
+            <label>
+                <input type="radio" name="type" value="achats"> Achats
+            </label>
+            <div class="subgroup">
+                <label><input type="checkbox" name="achats" value="${encheresEnCours}"> enchères ouvertes</label>
+                <label><input type="checkbox" name="achats" value="${encheresParticipe}"> mes enchères en cours</label>
+                <label><input type="checkbox" name="achats" value="${encheresTerminer}"> mes enchères remportées</label>
+            </div>
 
-                <<label>
-                    <input type="radio" name="type" value="achat"> Achats
-                </label>
-                <label>
-                    <input type="radio" name="type" value="vente"> Ventes
-                </label>
-    <div id="extra-options" style="display: none; margin-top: 10px;">
-            <label><input type="checkbox" name="option1"> Option 1</label><br>
-            <label><input type="checkbox" name="option2"> Option 2</label>
-        </div>
-    </form>
+            <label>
+                <input type="radio" name="type" value="ventes"> Ventes
+            </label>
+            <div class="subgroup">
+                <label><input type="checkbox" name="ventes" value="${ventesEnCours}"> mes ventes en cours</label>
+                <label><input type="checkbox" name="ventes" value="${ventesNonDebutes}"> ventes non-débutées</label>
+                <label><input type="checkbox" name="ventes" value="${ventesTerminer}"> ventes terminées</label>
+            </div>
+        </form>
+    </div>
 </div>
-</body>
-</html>
+<!--
 <script>
     const radios = document.querySelectorAll('input[name="type"]');
     radios.forEach(radio => {
@@ -28,3 +33,4 @@
         });
     });
 </script>
+-->
