--- a/src/main/resources/static/css/mesEncheres_mobile.css
+++ b/src/main/resources/static/css/mesEncheres_mobile.css
@@ -4,7 +4,7 @@
     main {
         width: 100%;
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         align-items: center;
         justify-content: center;
         flex-wrap: wrap;
